Improve KB creation dialog
  - Better consistency and spacing in form layout on the first creation step
  - Keep only language selection and anonymization toggle on 2nd step
  - Fix translation of account kb count

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -48,6 +48,12 @@
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
 	"account.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar en aquest compte",
+	"account.kb.add": "Afegir Knowledge Box",
+	"account.kb.count": "{{count}} de {{max}}",
+	"account.kb.edit": "Editar preferències",
+	"account.kb.publish": "Publica",
+	"account.kb.retire": "Despublicar",
+	"account.kb.users": "Gestió d'usuaris",
 	"account.kb-description": "Un Knowledge Box és una col·lecció de contingut en què cerca Nuclia. Alguns motors de cerca l'anomenen \"índex\" o \"corpus\". En la majoria dels casos, només necessiteu un Knowledge Box per a la vostra aplicació.",
 	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "Llicència",
@@ -71,14 +77,6 @@
 	"account.related_kbs": "Knowledge Boxes del compte",
 	"account.replace_config": "Reemplaçar configuració",
 	"account.speech_to_text_description": "Nuclia ofereix models millorats de veu a text. L'ús d'aquests models requereix un càlcul més elevat i suposen un cost addicional. Marqueu la casella de selecció  si voleu utilitzar els models millorats.",
-	"account.stash.add": "Afegir Knowledge Box",
-	"account.stash.delete": "Borrar",
-	"account.stash.edit": "Editar preferències",
-	"account.stash.publish": "Publica",
-	"account.stash.refresh_counters": "Actualitzar comptadors",
-	"account.stash.retire": "Despublicar",
-	"account.stash.upgrade": "Incrementar màxim KB",
-	"account.stash.users": "Gestió d'usuaris",
 	"account.threshold": "Llindar de consum",
 	"account.title": "Nom",
 	"account.token_description": "<strong>Important!</strong> Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
@@ -455,6 +453,35 @@
 	"getting-started.upload.link-textarea.help": "Un URL per línia",
 	"getting-started.upload.link-textarea.label": "Escriviu o enganxeu els URLs de les pàgines web",
 	"getting-started.upload.title": "1. Carregueu dades",
+	"kb.create.anonymization_model.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos nous del Knowledge Box",
+	"kb.create.anonymization_model.label": "Anonimatització",
+	"kb.create.anonymization_toggle.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos nous del Knowledge Box",
+	"kb.create.anonymization_toggle.label": "Anonimatització",
+	"kb.create.error": "Perdó, alguna cosa ha anat malament quan creavem la Knowledge Box. Torneu-ho a intenta, sius plau",
+	"kb.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
+	"kb.create.generative_model.help": "Indiqueu el model utilitzat per generar respostes a les preguntes dels usuaris.",
+	"kb.create.generative_model.label": "Generació de respostes",
+	"kb.create.in_progress": "Creació de la Knowledge Box en curs...",
+	"kb.create.invalid_name": "El nom de la Knowledge Box no és vàlid",
+	"kb.create.semantic_model.help": "Indiqueu els idiomes utilitzats a la informació que penjareu a la vostra KB.",
+	"kb.create.semantic_model.label": "Idiomes",
+	"kb.create.summary.help": "Especifica el tipus de resum a demanda que s'ha de generar",
+	"kb.create.summary.label": "Tipus de resum a demanda",
+	"kb.create.summary_model.help": "Indiqueu el model utilitzat per la funció de resum a demanda",
+	"kb.create.summary_model.label": "Resum a demanda",
+	"kb.create.summary_prompt.examples": "Exemples",
+	"kb.create.summary_prompt.prompt": "Sol·licitud de resum personalitzada",
+	"kb.create.summary_prompt.prompt_help": "Defineix una indicació personalitzada que s'utilitzarà en lloc de la sol·licitud predeterminada quan es generi un resum.",
+	"kb.create.title": "Crea una Knowledge Box",
+	"kb.create.user_prompts.examples": "Exemples",
+	"kb.create.user_prompts.prompt": "Prompt",
+	"kb.create.user_prompts.prompt_help": "Defineix la manera com volem que actuï el sistema quan fem una pregunta. Aquí podem definir regles més específiques, que fins i tot podrien anul·lar el comportament definit. Per exemple, podríem tenir una indicació que fa que el sistema només doni resultats en llistes, o fins i tot demani que respongui en un idioma determinat.",
+	"kb.create.user_prompts.system": "Comportament personalitzat",
+	"kb.create.user_prompts.system_help": "Defineix els trets generals de la personalitat de l'assistent o com s'ha de comportar quan respon a preguntes o durant una conversa. Per exemple, podríem definir que el sistema respondrà com a professional de la salut.",
+	"kb.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
+	"kb.create.visual_labeling.label": "Anotar per selecció",
+	"kb.create.zone_description": "Seleccioneu la zona i el proveïdor de processament que voleu utilitzar per a aquest Knowledge Box",
+	"kb.name": "Nom de la Knowledge Box",
 	"label-set.add": "Afegeix conjunt d'etiquetes",
 	"label-set.add-button": "Afegir nou",
 	"label-set.delete.confirm-description": "Si suprimiu el conjunt d'etiquetes, també se suprimiran totes les seves etiquetes. No podeu desfer aquesta acció. També pot afectar les formacions en curs i els suggeriments generats.",
@@ -783,31 +810,6 @@
 	"stash.confirm_delete_user.description": "L'única manera de desfer aquesta acció és convidant-lo de nou a unir-se a la Knowledge Box.",
 	"stash.confirm_delete_user.title": "Estas segur que vols eliminar aquest usuari?",
 	"stash.contact_admin": "No esteu autoritzat per crear un Knowledge Box. Contacta amb el teu administrador.",
-	"stash.create.anonymization_model.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos nous del Knowledge Box",
-	"stash.create.anonymization_model.label": "Anonimatització",
-	"stash.create.error": "Perdó, alguna cosa ha anat malament quan creavem la Knowledge Box. Torneu-ho a intenta, sius plau",
-	"stash.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
-	"stash.create.generative_model.help": "Indiqueu el model utilitzat per generar respostes a les preguntes dels usuaris.",
-	"stash.create.generative_model.label": "Generació de respostes",
-	"stash.create.in_progress": "Creació de la Knowledge Box en curs...",
-	"stash.create.semantic_model.help": "Indiqueu els idiomes utilitzats a la informació que penjareu a la vostra KB.",
-	"stash.create.semantic_model.label": "Idiomes",
-	"stash.create.summary.help": "Especifica el tipus de resum a demanda que s'ha de generar",
-	"stash.create.summary.label": "Tipus de resum a demanda",
-	"stash.create.summary_model.help": "Indiqueu el model utilitzat per la funció de resum a demanda",
-	"stash.create.summary_model.label": "Resum a demanda",
-	"stash.create.summary_prompt.examples": "Exemples",
-	"stash.create.summary_prompt.prompt": "Sol·licitud de resum personalitzada",
-	"stash.create.summary_prompt.prompt_help": "Defineix una indicació personalitzada que s'utilitzarà en lloc de la sol·licitud predeterminada quan es generi un resum.",
-	"stash.create.title": "Crea una Knowledge Box",
-	"stash.create.user_prompts.examples": "Exemples",
-	"stash.create.user_prompts.prompt": "Prompt",
-	"stash.create.user_prompts.prompt_help": "Defineix la manera com volem que actuï el sistema quan fem una pregunta. Aquí podem definir regles més específiques, que fins i tot podrien anul·lar el comportament definit. Per exemple, podríem tenir una indicació que fa que el sistema només doni resultats en llistes, o fins i tot demani que respongui en un idioma determinat.",
-	"stash.create.user_prompts.system": "Comportament personalitzat",
-	"stash.create.user_prompts.system_help": "Defineix els trets generals de la personalitat de l'assistent o com s'ha de comportar quan respon a preguntes o durant una conversa. Per exemple, podríem definir que el sistema respondrà com a professional de la salut.",
-	"stash.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
-	"stash.create.visual_labeling.label": "Anotar per selecció",
-	"stash.create.zone_description": "Seleccioneu la zona i el proveïdor de processament que voleu utilitzar per a aquest Knowledge Box",
 	"stash.delete.delete": "Eliminar Knowledge Box?",
 	"stash.delete.error": "Error en crear el Knowledge Box",
 	"stash.delete.warning": "Si borres la Knowledge Box {{ kb }} també s'esborraran totes les dades que conté.",
@@ -815,11 +817,9 @@
 	"stash.email": "Servidor de correu",
 	"stash.empty_kb": "La Knowledge Box encara està buida!",
 	"stash.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar a la Knowledge Box.",
-	"stash.kb_name_invalid": "El nom de la Knowledge Box no és vàlid",
 	"stash.kb_slug_invalid": "El slug de la caixa de coneixement no és vàlid",
 	"stash.logotip": "Logotip",
 	"stash.manage_users": "Gestionar usuaris",
-	"stash.name": "Nom de la Knowledge Box",
 	"stash.name_your_kb": "Anomena el teu Knowledge Box",
 	"stash.no_knowledge_boxes": "No hi ha cap cas de Knowledge Boxes en aquest compte",
 	"stash.preferences.receive_help": "Rebre ajuda",
