--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -48,6 +48,12 @@
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
 	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
+	"account.kb.add": "Añadir Knowledge Box",
+	"account.kb.count": "{{count}} de {{max}}",
+	"account.kb.edit": "Editar preferencias",
+	"account.kb.publish": "Publicar",
+	"account.kb.retire": "Despublicar",
+	"account.kb.users": "Gestión de usuarios",
 	"account.kb-description": "Una caja de conocimiento es una colección de contenido en la que Nuclia busca. Algunos motores de búsqueda lo llaman \"índice\" o \"corpus\". En la mayoría de los casos, solo necesita un Knowledge Box para su aplicación.",
 	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "Licencia",
@@ -71,14 +77,6 @@
 	"account.related_kbs": "Knowledge Boxes de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
 	"account.speech_to_text_description": "Nuclia ofrece modelos mejorados de voz a texto. El uso de estos modelos requiere un cómputo mayor y tienen un costo extra. Marque la siguiente casilla de verificación si desea utilizar los modelos mejorados.",
-	"account.stash.add": "Añadir Knowledge Box",
-	"account.stash.delete": "Borrar",
-	"account.stash.edit": "Editar preferencias",
-	"account.stash.publish": "Publicar",
-	"account.stash.refresh_counters": "Actualizar contadores",
-	"account.stash.retire": "Despublicar",
-	"account.stash.upgrade": "Incrementar el máximo de KB",
-	"account.stash.users": "Gestión de usuarios",
 	"account.threshold": "Umbral de consumo",
 	"account.title": "Nombre",
 	"account.token_description": "<strong>¡Importante!</strong> Copie y guarde la clave API. Desaparecerá una vez añadido.",
@@ -455,6 +453,35 @@
 	"getting-started.upload.link-textarea.help": "Una URL por línea",
 	"getting-started.upload.link-textarea.label": "Escriba o pegue las URLs de páginas web",
 	"getting-started.upload.title": "1. Cargar datos",
+	"kb.create.anonymization_model.help": "Aplicar la anonimización conforme al Reglamento general de protección de datos (GDPR) a todos los recursos nuevos en el Knowledge Box",
+	"kb.create.anonymization_model.label": "Anonimización",
+	"kb.create.anonymization_toggle.help": "Aplicar la anonimización conforme al Reglamento general de protección de datos (GDPR) a todos los recursos nuevos en el Knowledge Box",
+	"kb.create.anonymization_toggle.label": "Anonimización",
+	"kb.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la Knowledge Box. Por favor vuelve a intentarlo.",
+	"kb.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
+	"kb.create.generative_model.help": "Indique el modelo utilizado para generar respuestas a las preguntas de los usuarios.",
+	"kb.create.generative_model.label": "Generación de respuesta",
+	"kb.create.in_progress": "Creación de la Knowledge Box en curso...",
+	"kb.create.invalid_name": "El nombre de la Knowledge Box no es válido",
+	"kb.create.semantic_model.help": "Indica los idiomas utilizados en la información que subirás en tu KB.",
+	"kb.create.semantic_model.label": "Idiomas",
+	"kb.create.summary.help": "Especifica el tipo de resumen a petición que debe generarse",
+	"kb.create.summary.label": "Tipo de resumen bajo demanda",
+	"kb.create.summary_model.help": "Indique el modelo utilizado por la función de resumen bajo demanda",
+	"kb.create.summary_model.label": "Resumen bajo demanda",
+	"kb.create.summary_prompt.examples": "Ejemplos",
+	"kb.create.summary_prompt.prompt": "Petición de resumen personalizada",
+	"kb.create.summary_prompt.prompt_help": "Define un mensaje personalizado que se utilizará en lugar del mensaje predeterminado al generar un resumen.",
+	"kb.create.title": "Crea una Knowledge Box",
+	"kb.create.user_prompts.examples": "Ejemplos",
+	"kb.create.user_prompts.prompt": "Prompt",
+	"kb.create.user_prompts.prompt_help": "Define la forma en que queremos que actúe el sistema cuando hacemos una pregunta. Aquí podemos definir reglas más específicas, que incluso podrían anular el comportamiento definido. Por ejemplo, podríamos tener una pregunta que haga que el sistema sólo dé resultados en listas, o incluso que pida responder en un idioma determinado.",
+	"kb.create.user_prompts.system": "Comportamiento personalizado",
+	"kb.create.user_prompts.system_help": "Define rasgos generales de la personalidad del asistente, o sobre cómo debe comportarse al responder preguntas/ durante una conversación. Por ejemplo, podríamos definir que el sistema responda como un profesional sanitario.",
+	"kb.create.visual_labeling.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
+	"kb.create.visual_labeling.label": "Anotar por selección",
+	"kb.create.zone_description": "Seleccione la zona y el proveedor de procesamiento que le gustaría utilizar para este Knowledge Box",
+	"kb.name": "Nombre de la Knowledge Box",
 	"label-set.add": "Agregar conjunto de etiquetas",
 	"label-set.add-button": "Añadir nuevo",
 	"label-set.delete.confirm-description": "Al eliminar el conjunto de etiquetas, también se eliminarán todas sus etiquetas. No puede deshacer esta acción. También podría afectar las capacitaciones en curso y las sugerencias generadas.",
@@ -783,31 +810,6 @@
 	"stash.confirm_delete_user.description": "La única forma de deshacer esta acción es invitandolo de nuevo a unirse a la Knowledge Box.",
 	"stash.confirm_delete_user.title": "¿Estás seguro de que deseas eliminar este usuario?",
 	"stash.contact_admin": "No está autorizado para crear un Knowledge Box. Póngase en contacto con su administrador.",
-	"stash.create.anonymization_model.help": "Aplicar la anonimización conforme al Reglamento general de protección de datos (GDPR) a todos los recursos nuevos en el Knowledge Box",
-	"stash.create.anonymization_model.label": "Anonimización",
-	"stash.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la Knowledge Box. Por favor vuelve a intentarlo.",
-	"stash.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
-	"stash.create.generative_model.help": "Indique el modelo utilizado para generar respuestas a las preguntas de los usuarios.",
-	"stash.create.generative_model.label": "Generación de respuesta",
-	"stash.create.in_progress": "Creación de la Knowledge Box en curso...",
-	"stash.create.semantic_model.help": "Indica los idiomas utilizados en la información que subirás en tu KB.",
-	"stash.create.semantic_model.label": "Idiomas",
-	"stash.create.summary.help": "Especifica el tipo de resumen a petición que debe generarse",
-	"stash.create.summary.label": "Tipo de resumen bajo demanda",
-	"stash.create.summary_model.help": "Indique el modelo utilizado por la función de resumen bajo demanda",
-	"stash.create.summary_model.label": "Resumen bajo demanda",
-	"stash.create.summary_prompt.examples": "Ejemplos",
-	"stash.create.summary_prompt.prompt": "Petición de resumen personalizada",
-	"stash.create.summary_prompt.prompt_help": "Define un mensaje personalizado que se utilizará en lugar del mensaje predeterminado al generar un resumen.",
-	"stash.create.title": "Crea una Knowledge Box",
-	"stash.create.user_prompts.examples": "Ejemplos",
-	"stash.create.user_prompts.prompt": "Prompt",
-	"stash.create.user_prompts.prompt_help": "Define la forma en que queremos que actúe el sistema cuando hacemos una pregunta. Aquí podemos definir reglas más específicas, que incluso podrían anular el comportamiento definido. Por ejemplo, podríamos tener una pregunta que haga que el sistema sólo dé resultados en listas, o incluso que pida responder en un idioma determinado.",
-	"stash.create.user_prompts.system": "Comportamiento personalizado",
-	"stash.create.user_prompts.system_help": "Define rasgos generales de la personalidad del asistente, o sobre cómo debe comportarse al responder preguntas/ durante una conversación. Por ejemplo, podríamos definir que el sistema responda como un profesional sanitario.",
-	"stash.create.visual_labeling.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
-	"stash.create.visual_labeling.label": "Anotar por selección",
-	"stash.create.zone_description": "Seleccione la zona y el proveedor de procesamiento que le gustaría utilizar para este Knowledge Box",
 	"stash.delete.delete": "¿Eliminar Knowledge Box?",
 	"stash.delete.error": "Error al crear el Knowledge Box",
 	"stash.delete.warning": "Si eliminas la Knowledge Box {{ kb }} también se eliminaran todos los datos que contenga",
@@ -815,11 +817,9 @@
 	"stash.email": "Servidor de correo",
 	"stash.empty_kb": "!La Knowledge Box aun está vacía!",
 	"stash.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta Knowledge Box",
-	"stash.kb_name_invalid": "El nombre de la Knowledge Box no es válido",
 	"stash.kb_slug_invalid": "El slug de la caja de conocimiento no es válido",
 	"stash.logotip": "Logotipo",
 	"stash.manage_users": "Gestionar usuarios",
-	"stash.name": "Nombre de la Knowledge Box",
 	"stash.name_your_kb": "Nombra tu Knowledge Box",
 	"stash.no_knowledge_boxes": "No hay Knowledge Boxes en esta cuenta.",
 	"stash.preferences.receive_help": "Recibir ayuda",
