--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -48,6 +48,12 @@
 	"account.full_name": "Prénom et nom de famille",
 	"account.generate_key": "Générer une nouvelle clé",
 	"account.invited_user": "Nous avons envoyé un e-mail d'invitation à {{user}} pour qu'il s'inscrive sur ce compte.",
+	"account.kb.add": "Ajouter une Knowledge Box",
+	"account.kb.count": "{{count}} sur {{max}}",
+	"account.kb.edit": "Modifier les préférences",
+	"account.kb.publish": "Publier",
+	"account.kb.retire": "Dépublier",
+	"account.kb.users": "Gestion des utilisateurs",
 	"account.kb-description": "Une boîte à connaissances est un ensemble de contenus sur lesquels Nuclia effectue des recherches. Certains moteurs de recherche l'appellent \"index\" ou \"corpus\".  Dans la plupart des cas, vous n'avez besoin que d'une seule boîte de connaissances pour votre application.",
 	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "Licence",
@@ -72,14 +78,6 @@
 	"account.replace_config": "Remplacer les paramètres",
 	"account.speech_to_text": "De la parole au texte",
 	"account.speech_to_text_description": "Nuclia propose des modèles de synthèse vocale améliorés. L'utilisation de ces modèles nécessite plus de calculs et un coût supplémentaire associé. Cochez la case suivante si vous souhaitez utiliser les modèles améliorés.",
-	"account.stash.add": "Ajouter une Knowledge Box",
-	"account.stash.delete": "Supprimer",
-	"account.stash.edit": "Modifier les préférences",
-	"account.stash.publish": "Publier",
-	"account.stash.refresh_counters": "Actualiser les compteurs",
-	"account.stash.retire": "Dépublier",
-	"account.stash.upgrade": "Augmenter le maximum de KB",
-	"account.stash.users": "Gestion des utilisateurs",
 	"account.threshold": "Seuil de consommation",
 	"account.title": "Nom",
 	"account.token_description": "<strong> Important !</strong> Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
@@ -456,6 +454,35 @@
 	"getting-started.upload.link-textarea.help": "Une URL par ligne",
 	"getting-started.upload.link-textarea.label": "Tapez ou collez les URLs des pages Web",
 	"getting-started.upload.title": "1. Télécharger des données",
+	"kb.create.anonymization_model.help": "Appliquer l'anonymisation conforme au Règlement général sur la protection des données (RGPD) à toutes les nouvelles ressources de la Knowledge Box",
+	"kb.create.anonymization_model.label": "Anonymisation",
+	"kb.create.anonymization_toggle.help": "Appliquer l'anonymisation conforme au Règlement général sur la protection des données (RGPD) à toutes les nouvelles ressources de la Knowledge Box",
+	"kb.create.anonymization_toggle.label": "Anonymisation",
+	"kb.create.error": "Une erreur s'est produite lors de la création de la Knowledge Box. Veuillez réessayer.",
+	"kb.create.failure": "Quelque chose ne va pas en ce moment. Contactez votre administrateur.",
+	"kb.create.generative_model.help": "Indiquez le modèle utilisé pour générer des réponses aux questions des utilisateurs.",
+	"kb.create.generative_model.label": "Génération de réponses",
+	"kb.create.in_progress": "Création de la Knowledge Box en cours…",
+	"kb.create.invalid_name": "Nom de la Knowledge Box invalide",
+	"kb.create.semantic_model.help": "Indiquez les langues utilisées dans les informations que vous téléchargerez dans votre KB.",
+	"kb.create.semantic_model.label": "Les langues",
+	"kb.create.summary.help": "Spécifie le type de résumé à la demande à générer",
+	"kb.create.summary.label": "Type de résumé à la demande",
+	"kb.create.summary_model.help": "Indique le modèle utilisé par la fonctionnalité de résumé à la demande",
+	"kb.create.summary_model.label": "Résumé à la demande",
+	"kb.create.summary_prompt.examples": "Exemples",
+	"kb.create.summary_prompt.prompt": "Invite de résumé personnalisée",
+	"kb.create.summary_prompt.prompt_help": "Définit une invite personnalisée qui sera utilisée à la place de l'invite par défaut lors de la génération d'un résumé.",
+	"kb.create.title": "Créer une Knowledge Box",
+	"kb.create.user_prompts.examples": "Exemples",
+	"kb.create.user_prompts.prompt": "Prompt",
+	"kb.create.user_prompts.prompt_help": "Définit la manière dont nous voulons que le système agisse lorsque nous posons une question. Il est possible de définir des règles plus spécifiques, qui peuvent même remplacer le comportement défini. Par exemple, nous pourrions avoir une invite qui oblige le système à ne donner que des résultats sous forme de listes, ou même à demander de répondre dans une langue donnée.",
+	"kb.create.user_prompts.system": "Comportement personnalisé",
+	"kb.create.user_prompts.system_help": "Définit les traits de personnalité généraux de l'assistant, ou la manière dont il doit se comporter lorsqu'il répond à des questions ou au cours d'une conversation. Par exemple, nous pourrions définir que le système répondra en tant que professionnel de la santé.",
+	"kb.create.visual_labeling.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
+	"kb.create.visual_labeling.label": "Annoter par sélection",
+	"kb.create.zone_description": "Sélectionnez la zone et le fournisseur de traitement que vous souhaitez utiliser pour cette Knowledge Box",
+	"kb.name": "Nom de la Knowledge Box",
 	"label-set.add": "Ajouter un jeu d'étiquettes",
 	"label-set.add-button": "Ajouter nouveau",
 	"label-set.delete.confirm-description": "La suppression du jeu d'étiquettes supprimera également toutes ses étiquettes. Vous ne pouvez pas annuler cette action. Cela peut également affecter les formations en cours et les suggestions générées.",
@@ -784,31 +811,6 @@
 	"stash.confirm_delete_user.description": "La seule façon d’annuler cette action est de les inviter à nouveau à rejoindre votre Knowledge Box.",
 	"stash.confirm_delete_user.title": "Êtes-vous sûr de vouloir supprimer cet utilisateur ?",
 	"stash.contact_admin": "Vous n'êtes pas autorisé à créer une Knowledge Box. Contactez votre administrateur.",
-	"stash.create.anonymization_model.help": "Appliquer l'anonymisation conforme au Règlement général sur la protection des données (RGPD) à toutes les nouvelles ressources de la Knowledge Box",
-	"stash.create.anonymization_model.label": "Anonymisation",
-	"stash.create.error": "Une erreur s'est produite lors de la création de la Knowledge Box. Veuillez réessayer.",
-	"stash.create.failure": "Quelque chose ne va pas en ce moment. Contactez votre administrateur.",
-	"stash.create.generative_model.help": "Indiquez le modèle utilisé pour générer des réponses aux questions des utilisateurs.",
-	"stash.create.generative_model.label": "Génération de réponses",
-	"stash.create.in_progress": "Création de la Knowledge Box en cours…",
-	"stash.create.semantic_model.help": "Indiquez les langues utilisées dans les informations que vous téléchargerez dans votre KB.",
-	"stash.create.semantic_model.label": "Les langues",
-	"stash.create.summary.help": "Spécifie le type de résumé à la demande à générer",
-	"stash.create.summary.label": "Type de résumé à la demande",
-	"stash.create.summary_model.help": "Indique le modèle utilisé par la fonctionnalité de résumé à la demande",
-	"stash.create.summary_model.label": "Résumé à la demande",
-	"stash.create.summary_prompt.examples": "Exemples",
-	"stash.create.summary_prompt.prompt": "Invite de résumé personnalisée",
-	"stash.create.summary_prompt.prompt_help": "Définit une invite personnalisée qui sera utilisée à la place de l'invite par défaut lors de la génération d'un résumé.",
-	"stash.create.title": "Créer une Knowledge Box",
-	"stash.create.user_prompts.examples": "Exemples",
-	"stash.create.user_prompts.prompt": "Prompt",
-	"stash.create.user_prompts.prompt_help": "Définit la manière dont nous voulons que le système agisse lorsque nous posons une question. Il est possible de définir des règles plus spécifiques, qui peuvent même remplacer le comportement défini. Par exemple, nous pourrions avoir une invite qui oblige le système à ne donner que des résultats sous forme de listes, ou même à demander de répondre dans une langue donnée.",
-	"stash.create.user_prompts.system": "Comportement personnalisé",
-	"stash.create.user_prompts.system_help": "Définit les traits de personnalité généraux de l'assistant, ou la manière dont il doit se comporter lorsqu'il répond à des questions ou au cours d'une conversation. Par exemple, nous pourrions définir que le système répondra en tant que professionnel de la santé.",
-	"stash.create.visual_labeling.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
-	"stash.create.visual_labeling.label": "Annoter par sélection",
-	"stash.create.zone_description": "Sélectionnez la zone et le fournisseur de traitement que vous souhaitez utiliser pour cette Knowledge Box",
 	"stash.delete.delete": "Supprimer la Knowledge Box ?",
 	"stash.delete.error": "Erreur lors de la création de la Knowledge Box",
 	"stash.delete.warning": "Si vous supprimez la Knowledge Box {{ kb }}, toutes les données seront également supprimées",
@@ -816,11 +818,9 @@
 	"stash.email": "Serveur de messagerie",
 	"stash.empty_kb": "La Knowledge Box est vide",
 	"stash.invited_user": "Nous avons envoyé un e-mail d'invitation à {{user}} pour rejoindre cette Knowledge Box.",
-	"stash.kb_name_invalid": "Nom de la Knowledge Box invalide",
 	"stash.kb_slug_invalid": "Limace de boîte de connaissances invalide",
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Gérer les utilisateurs",
-	"stash.name": "Nom de la Knowledge Box",
 	"stash.name_your_kb": "Nommez votre Knowledge Box",
 	"stash.no_knowledge_boxes": "Il n'y a pas de Knowledge Boxes dans ce compte",
 	"stash.preferences.receive_help": "Reçu de l'aide",
