--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -48,6 +48,12 @@
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
+	"account.kb.add": "Add Knowledge Box",
+	"account.kb.count": "{{count}} of {{max}}",
+	"account.kb.edit": "Edit preferences",
+	"account.kb.publish": "Publish",
+	"account.kb.retire": "Unpublish",
+	"account.kb.users": "Users management",
 	"account.kb-description": "A Knowledge Box is a collection of content that Nuclia searches on. Some search engines call it an \"index\" or \"corpus\".  In most cases, you only need one Knowledge Box for your application.",
 	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "License",
@@ -72,14 +78,6 @@
 	"account.replace_config": "Replace settings",
 	"account.speech_to_text": "Speech-to-text",
 	"account.speech_to_text_description": "Nuclia offers enhanced speech-to-text models. Using these models require more computation and an associated extra cost. Check the following checkbox if you want to use the enhanced models.",
-	"account.stash.add": "Add Knowledge Box",
-	"account.stash.delete": "Delete",
-	"account.stash.edit": "Edit preferences",
-	"account.stash.publish": "Publish",
-	"account.stash.refresh_counters": "Refresh counters",
-	"account.stash.retire": "Unpublish",
-	"account.stash.upgrade": "Increase KB maximum",
-	"account.stash.users": "Users management",
 	"account.threshold": "Consumption threshold",
 	"account.title": "Name",
 	"account.token_description": "<strong>Important!</strong> Copy and save the API key. It will disappear once added.",
@@ -456,6 +454,35 @@
 	"getting-started.upload.link-textarea.help": "One URL per line",
 	"getting-started.upload.link-textarea.label": "Type or paste web page URLs",
 	"getting-started.upload.title": "1. Upload data",
+	"kb.create.anonymization_model.help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all new resources in the Knowledge Box",
+	"kb.create.anonymization_model.label": "Anonymization ",
+	"kb.create.anonymization_toggle.help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all new resources in the Knowledge Box",
+	"kb.create.anonymization_toggle.label": "Anonymization ",
+	"kb.create.error": "Something went wrong when creating the Knowledge Box. Please try again.",
+	"kb.create.failure": "Something is wrong at the moment. Contact your administrator.",
+	"kb.create.generative_model.help": "Indicate the model used to generate answers to user questions.",
+	"kb.create.generative_model.label": "Answer generation",
+	"kb.create.in_progress": "Knowledge Box creation in progress…",
+	"kb.create.invalid_name": "Invalid Knowledge Box name",
+	"kb.create.semantic_model.help": "Indicate the languages used in the information you will upload in your KB.",
+	"kb.create.semantic_model.label": "Languages",
+	"kb.create.summary.help": "Specifies the kind of on-demand summary to be generated ",
+	"kb.create.summary.label": "On-demand summary kind",
+	"kb.create.summary_model.help": "Indicate the model used by the on-demand summarisation feature",
+	"kb.create.summary_model.label": "On-demand summarisation",
+	"kb.create.summary_prompt.examples": "Examples",
+	"kb.create.summary_prompt.prompt": "Custom summarisation prompt",
+	"kb.create.summary_prompt.prompt_help": "Defines a custom prompt that will be used instead of the default prompt when generating a summary.",
+	"kb.create.title": "Create a Knowledge Box",
+	"kb.create.user_prompts.examples": "Examples",
+	"kb.create.user_prompts.prompt": "Prompt",
+	"kb.create.user_prompts.prompt_help": "Defines the way we want the system to act when we ask a question. Here we can define more specific rules, that could even override the defined behavior. For example, we could have a prompt that makes the system only give results in lists, or even ask to answer in a given language.",
+	"kb.create.user_prompts.system": "Custom behavior",
+	"kb.create.user_prompts.system_help": "Defines general personality traits of the assistant, or about how it should behave when answering questions/ during a conversation. For example, we could define that the system will answer as a health professional.",
+	"kb.create.visual_labeling.help": "Allow to visually select some parts of the document layout and annotate them.",
+	"kb.create.visual_labeling.label": "Annotate by selection",
+	"kb.create.zone_description": "Select the zone and the processing provider you would like to use for this Knowledge Box",
+	"kb.name": "Knowledge Box name",
 	"label-set.add": "Add label set",
 	"label-set.add-button": "Add new",
 	"label-set.delete.confirm-description": "Deleting the label set will also delete all its labels. You cannot undo this action. It might also affect ongoing trainings and generated suggestions.",
@@ -784,31 +811,6 @@
 	"stash.confirm_delete_user.description": "The only way you can undo this action is by inviting them again to join your Knowledge Box.",
 	"stash.confirm_delete_user.title": "Are you sure  you want to delete this user?",
 	"stash.contact_admin": "You are not authorized to create a Knowledge Box. Contact your administrator.",
-	"stash.create.anonymization_model.help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all new resources in the Knowledge Box",
-	"stash.create.anonymization_model.label": "Anonymization ",
-	"stash.create.error": "Something went wrong when creating the Knowledge Box. Please try again.",
-	"stash.create.failure": "Something is wrong at the moment. Contact your administrator.",
-	"stash.create.generative_model.help": "Indicate the model used to generate answers to user questions.",
-	"stash.create.generative_model.label": "Answer generation",
-	"stash.create.in_progress": "Knowledge Box creation in progress…",
-	"stash.create.semantic_model.help": "Indicate the languages used in the information you will upload in your KB.",
-	"stash.create.semantic_model.label": "Languages",
-	"stash.create.summary.help": "Specifies the kind of on-demand summary to be generated ",
-	"stash.create.summary.label": "On-demand summary kind",
-	"stash.create.summary_model.help": "Indicate the model used by the on-demand summarisation feature",
-	"stash.create.summary_model.label": "On-demand summarisation",
-	"stash.create.summary_prompt.examples": "Examples",
-	"stash.create.summary_prompt.prompt": "Custom summarisation prompt",
-	"stash.create.summary_prompt.prompt_help": "Defines a custom prompt that will be used instead of the default prompt when generating a summary.",
-	"stash.create.title": "Create a Knowledge Box",
-	"stash.create.user_prompts.examples": "Examples",
-	"stash.create.user_prompts.prompt": "Prompt",
-	"stash.create.user_prompts.prompt_help": "Defines the way we want the system to act when we ask a question. Here we can define more specific rules, that could even override the defined behavior. For example, we could have a prompt that makes the system only give results in lists, or even ask to answer in a given language.",
-	"stash.create.user_prompts.system": "Custom behavior",
-	"stash.create.user_prompts.system_help": "Defines general personality traits of the assistant, or about how it should behave when answering questions/ during a conversation. For example, we could define that the system will answer as a health professional.",
-	"stash.create.visual_labeling.help": "Allow to visually select some parts of the document layout and annotate them.",
-	"stash.create.visual_labeling.label": "Annotate by selection",
-	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this Knowledge Box",
 	"stash.delete.delete": "Delete Knowledge Box?",
 	"stash.delete.error": "Error when creating the Knowledge Box",
 	"stash.delete.warning": "If you delete the Knowledge Box {{ kb }}, all data will also be deleted",
@@ -816,11 +818,9 @@
 	"stash.email": "Email server",
 	"stash.empty_kb": "The Knowledge Box is empty",
 	"stash.invited_user": "We have sent an invitation email to {{user}} to join this Knowledge Box. ",
-	"stash.kb_name_invalid": "Invalid Knowledge Box name",
 	"stash.kb_slug_invalid": "Invalid knowledge box slug",
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Manage users",
-	"stash.name": "Knowledge Box name",
 	"stash.name_your_kb": "Name your Knowledge Box",
 	"stash.no_knowledge_boxes": "There are no Knowledge Boxes in this account",
 	"stash.preferences.receive_help": "Received help",
